# 8queens

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
deploy/: ECS-QUICKSTART.md  proof-of-deployment.md  run.sh
docs/: architecture.mmd  baseline-compare.json  baseline-compare.md  sse-frames.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
queens8/: __init__.py
queens8/api/: deps.py  health.py  main.py  routes_explore.py  routes_findings.py  routes_kg.py  routes_projects.py  routes_society.py
queens8/core/: config.py
queens8/mcp/: __init__.py  banner.py  server.py  tenancy.py
queens8/society/: __init__.py  blackboard.py  loop.py  roles.py
queens8/store/: __init__.py  base.py  sqlite.py
qwen8/: __init__.py
qwen8/api/: deps.py  health.py  main.py  routes_explore.py  routes_findings.py  routes_kg.py  routes_projects.py  routes_society.py
qwen8/core/: config.py
scripts/: baseline_compare.py  capture_run.py  generate_era_images.py
tests/: test_api_app_boots.py  test_baseline_compare.py  test_blackboard_claim.py  test_blackboard_fns.py  test_budget_frames.py  test_capture_bundle.py  test_config_store_foundation.py  test_deploy_db_path.py  test_embed_batch_chunking.py  test_generate_era_images.py  test_json_object_mode.py  test_llm_call_counter.py  test_loop.py  test_reopen_then_claim.py  test_replay_mode.py  test_researcher_embeds.py  test_roles.py  test_routes_society.py  test_society_e2e.py  test_startup_assertions.py  test_synopsis_rewire.py  test_termination.py
(+110 files in other folders)
