[project]
name = "qwen8"
version = "0.1.0"
description = "qwen8 — an agent society with a shared brain, on Qwen/DashScope."
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "pyyaml>=6.0.3",
  "httpx>=0.28.1",
  "fastapi>=0.122.0",
  "uvicorn[standard]>=0.38.0",
  "openai>=2.30.0",
  "tavily-python>=0.7.23",
  "mcp>=1.16.0",
]

[project.optional-dependencies]
local = ["sqlite-vec>=0.1.6"]
dev = ["pytest>=8.4.2", "pytest-asyncio>=1.3.0", "ruff>=0.12.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qwen8"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
